Cabal-Version:       >= 1.6
Name:                cairo-appbase
Version:             0.2
Description:         Base code for an application using Cairo graphics
License:             BSD3
License-file:        LICENSE
Author:              Alexander Iliev, Conrad Parker, Johan Bockgård
Maintainer:          conrad@metadecks.org
Build-Depends:       base, haskell98, mtl, glib, gtk, glade, cairo, list-extras
Build-Type:          Simple
Data-Files:          data/main.glade

Executable:          cairo-appbase
Main-Is:             cairo-appbase.hs
Hs-Source-Dirs:      src
ghc-options:         -fglasgow-exts -O2 -funbox-strict-fields
