Cabal-Version:       >= 1.6
Name:                grumpy-campers
Version:             0.2
Description:         Small GTK/Haskell app to help grumpy campers locate where to pitch their tents.
License:             BSD3
License-file:        LICENSE
Author:              Alexander Iliev, Conrad Parker, Johan Bockgård
Maintainer:          alex.iliev@gmail.com
Build-Depends:       base, haskell98, mtl, glib, gtk, glade, cairo, list-extras
Build-Type:          Simple
Data-Files:          data/main.glade

Executable:          grumpy-campers.hs
Main-Is:             grumpy-campers.hs
Hs-Source-Dirs:      src
ghc-options:         -fglasgow-exts -O2 -funbox-strict-fields
